# RegHub

./: .dockerignore  .env.example  .env.local.example  .gitignore  AUDIT_REPORT.md  BASELINE_COMPATIBILITY_V0.2.3.4.txt  BASELINE_COMPATIBILITY_V0.3.0.1.txt  BASELINE_COMPATIBILITY_V0.3.0.2.txt  BASELINE_COMPATIBILITY_V0.3.0.txt  CHANGELOG.md  Dockerfile  FILE_INVENTORY_V0.3.0.1.txt  FILE_INVENTORY_V0.3.0.txt  LICENSE  Makefile  README.md  RELEASE_FILE_MANIFEST_V0.3.2.0.json  RELEASE_MANIFEST_V0.1.1.md  RELEASE_MANIFEST_V0.2.0.md  RELEASE_MANIFEST_V0.2.1.md  RELEASE_MANIFEST_V0.2.2.1.md  RELEASE_MANIFEST_V0.2.2.md  RELEASE_MANIFEST_V0.2.3.1.md  RELEASE_MANIFEST_V0.2.3.2.md  RELEASE_MANIFEST_V0.2.3.3.md  RELEASE_MANIFEST_V0.2.3.4.md  RELEASE_MANIFEST_V0.2.3.md  RELEASE_MANIFEST_V0.3.0.1.md  RELEASE_MANIFEST_V0.3.0.2.md  RELEASE_MANIFEST_V0.3.0.md  RELEASE_MANIFEST_V0.3.1.0.md  RELEASE_MANIFEST_V0.3.1.1.md  RELEASE_MANIFEST_V0.3.1.2.md  RELEASE_MANIFEST_V0.3.2.0.md  RELEASE_VERIFICATION_V0.2.3.1.txt  RELEASE_VERIFICATION_V0.2.3.2.txt  RELEASE_VERIFICATION_V0.2.3.3.txt  RELEASE_VERIFICATION_V0.2.3.4.txt  RELEASE_VERIFICATION_V0.2.3.txt  RELEASE_VERIFICATION_V0.3.0.1.txt  (+6 more)
app/: __init__.py  container.py  main.py
docs/: 00_PROJECT_CONSTITUTION.md  01_MVP_SCOPE.md  02_SYSTEM_ARCHITECTURE.md  03_API_CONTRACT.md  04_DATABASE_SCHEMA.md  05_AUTHENTICATION_MODEL.md  06_SECURITY_MODEL.md  07_TEMPLATE_MANIFEST_SPEC.md  08_DEPLOYMENT_FLOW.md  09_COOLIFY_DEPLOYMENT.md  10_TEST_STRATEGY.md  11_RELEASE_CHECKLIST.md  12_V0.1.1_UPDATE.md  13_V0.2.0_UPGRADE.md  14_V0.2.0_ENVIRONMENT.md  (+39 more)
(+147 files in other folders)
